react-frontend/src/App.css
.App {
  text-align: center;
}

.Homepage-title {
    text-align: center;
    vertical-align: text-top;
    color: white;
    font-size: 20px;
    font-style: oblique;
    /*
    display: flex;
    */
}

.Mainpage-body {
    background-color: white;
}

.Sidebar-nav {
    background-color: #0f1c24;
    color: white;
    font: Monaco;
    font-style: oblique;
    text-align: left;
    padding-left: 5px;
    width: 10%;
    height: 500px;
    float:left;
}

.Dropdown-menu {
    /*align-content: center;*/
    text-align: center;
    vertical-align: middle;
    display: flex;
    width: 40px;
    height: 40px;
    background-color: aliceblue;
    color: black;
}

.Credit {
    vertical-align: bottom;
}

/*remnant css from rotating react logo; could be repurposed?*/
@media (prefers-reduced-motion: no-preference) {
  .App-logo {
    animation: App-logo-spin infinite 20s linear;
  }
}

.App-logo {
    height: 40vmin;
    pointer-events: none;
}

.App-header {
    background-color: #1ba3f7;
    min-height: 15vh;
    max-height: 20vh;
    align-items: initial;
    justify-content: center;
    font-size: calc(10px + 2vmin);
    color: white;
    padding-left: 5px;
    padding-top: 5px;
    /*
    display: flex;
    justify-content: flex-start;
    */
}


.App-link {
  color: #61dafb;
}

@keyframes App-logo-spin {
  from {
    transform: rotate(0deg);
  }
  to {
    transform: rotate(360deg);
  }
}

